force-app/main/default/objects/Contract_Lines__c/Contract_Lines__c.object-meta.xml
<CustomObject>
    <label>Contract Lines</label>
    <nameField>
        <displayFormat>IL-{0000}</displayFormat>
        <label>Contract Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>