force-app/main/default/objects/Contract_Lines__c/fields/Account_Elements__c.field-meta.xml
<CustomField>
    <fullName>Account_Elements__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is added but not displayed....it&#39;s only used to gain access to the Account object and its fields.</description>
    <label>Account Elements</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>