force-app/main/default/objects/Contract_Lines__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by trigger that scans contract lines looking at Next Invoice Dates and turning Ready to Invoice to True when Next Invoice Date &lt;= TODAY. By adding this field, closed Contract with no more billing can be turned Inactive and the trigger doesn&#39;t have to scan them.</description>
    <inlineHelpText>Used by trigger that scans contract lines looking at Nxt Inv Dates and turns Ready to Invoice to Y when Next Invoice Date&lt;=TODAY. By adding this field, closed Contract with no more billing can be turned Inactive and the trigger doesn&#39;t have to scan them.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>