force-app/main/default/objects/Contract_Lines__c/fields/Base_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Base_Invoice_Date__c</fullName>
    <label>Base Invoice Date</label>
    <type>Date</type>
</CustomField>