force-app/main/default/objects/Contract_Lines__c/fields/Contract_Elements__c.field-meta.xml
<CustomField>
    <fullName>Contract_Elements__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract_Elements</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Lines (Contract_Elements)</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>