force-app/main/default/objects/Contract_Lines__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>This date is automatically populated based on the Contract object - Contract End Date</description>
    <formula>Contract__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This date is automatically populated based on the Contract object - Contract End Date</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>