force-app/main/default/objects/Contract_Lines__c/fields/Contract_End_Date_do_not_use_2__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_do_not_use_2__c</fullName>
    <label>Contract End Date do not use 2</label>
    <type>Date</type>
</CustomField>