force-app/main/default/objects/Contract_Lines__c/fields/Date_Last_Invoice_Generated__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Invoice_Generated__c</fullName>
    <inlineHelpText>Auto filled with system date the last invoice generated.  Informational only.</inlineHelpText>
    <label>Date Last Invoice Generated</label>
    <type>Date</type>
</CustomField>