force-app/main/default/objects/Contract_Lines__c/fields/DNU_Next_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>DNU_Next_Invoice_Date__c</fullName>
    <formula>IF (TEXT( Invoice_Frequency__c )=&#39;Daily&#39;, Date_Last_Invoice_Generated__c +1, 
if( TEXT(Invoice_Frequency__c)=&#39;Monthly&#39;, Date_Last_Invoice_Generated__c +30, 
if( TEXT(Invoice_Frequency__c)=&#39;Quarterly&#39;, Date_Last_Invoice_Generated__c +90, 
if( TEXT(Invoice_Frequency__c)=&#39;Semi-Annually&#39;, Date_Last_Invoice_Generated__c +180, 
if( TEXT(Invoice_Frequency__c)=&#39;Annually&#39;, Date_Last_Invoice_Generated__c +365, 
null)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>After invoicing, updates to next invoice date based on frequency</inlineHelpText>
    <label>DNU Next Invoice Date</label>
    <type>Date</type>
</CustomField>