force-app/main/default/objects/Contract_Lines__c/fields/Frequency_of_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Invoicing__c</fullName>
    <label>Frequency of Invoicing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>