force-app/main/default/objects/Contract_Lines__c/fields/Has_Been_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Has_Been_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically turned on when invoice has been generated.   Then automatically turned off awaiting next invoice.</inlineHelpText>
    <label>Has Been Invoiced</label>
    <type>Checkbox</type>
</CustomField>