force-app/main/default/objects/Contract_Lines__c/fields/Income_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Income_Schedule__c</fullName>
    <inlineHelpText>Indicates number of months between billing.  Should be in sync with Invoice Frequency.</inlineHelpText>
    <label>Income Schedule</label>
    <length>50</length>
    <type>Text</type>
</CustomField>