force-app/main/default/objects/Contract_Lines__c/fields/Income_Schedule_Definition__c.field-meta.xml
<CustomField>
    <fullName>Income_Schedule_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Income Schedule Definition lookup name</label>
    <referenceTo>c2g__codaIncomeScheduleDefinition__c</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>