force-app/main/default/objects/Contract_Lines__c/fields/Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Auto generated count of how many invoices have been generated for this line</inlineHelpText>
    <label>Invoice Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>