force-app/main/default/objects/Contract_Lines__c/fields/Invoice_Freq__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Freq__c</fullName>
    <label>Invoice Freq #</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>