force-app/main/default/objects/Contract_Lines__c/fields/Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Frequency__c</fullName>
    <inlineHelpText>Billing frequency for this line</inlineHelpText>
    <label>Invoice Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>2 Year (Single Payment)</fullName>
            </value>
            <value>
                <fullName>3 Year (Single Payment)</fullName>
            </value>
            <value>
                <fullName>1 Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>