force-app/main/default/objects/Contract_Lines__c/fields/Invoice_has_been_created__c.field-meta.xml
<CustomField>
    <fullName>Invoice_has_been_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice has been created?</label>
    <type>Checkbox</type>
</CustomField>