force-app/main/default/objects/Contract_Lines__c/fields/Max_Count__c.field-meta.xml
<CustomField>
    <fullName>Max_Count__c</fullName>
    <label>Max Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>