force-app/main/default/objects/Contract_Lines__c/fields/Ready_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically flagged when a contract line reaches it&#39;s Next Invoice date</inlineHelpText>
    <label>Ready to Invoice</label>
    <type>Checkbox</type>
</CustomField>