force-app/main/default/objects/Contract_Lines__c/fields/Remaining_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Invoices__c</fullName>
    <formula>Total_number_invoices__c - Invoice_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of future invoices still to generate for this line</inlineHelpText>
    <label>Remaining Invoices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>