force-app/main/default/objects/Contract_Lines__c/fields/Sales_Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to line item on last invoice generated for this contract line</inlineHelpText>
    <label>Sales Invoice Line</label>
    <referenceTo>c2g__codaInvoiceLineItem__c</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>