force-app/main/default/objects/Contract_Lines__c/fields/Sales_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Number__c</fullName>
    <formula>Sales_Invoice_Line__r.c2g__Invoice__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last invoice number generated for this line</inlineHelpText>
    <label>Sales Invoice Number</label>
    <type>Text</type>
</CustomField>