force-app/main/default/objects/Contract_Lines__c/fields/Total_number_invoices__c.field-meta.xml
<CustomField>
    <fullName>Total_number_invoices__c</fullName>
    <inlineHelpText>Total number of invoices that will generate over life of line</inlineHelpText>
    <label>Total # Invoices</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>