force-app/main/default/objects/Contract_Lines__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>Next_Invoice_Date__c</columns>
    <columns>Invoice_Count__c</columns>
    <columns>Remaining_Invoices__c</columns>
    <columns>Ready_to_Invoice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>